# cpp-doom

./: .clang-format  .gitignore  CMakeLists.txt
crispy/: CMakeLists.txt
crispy/src/: CMakeLists.txt  deh_str.c  doomtype.h  i_system.c  i_system_ext.cpp  i_system_ext.h  v_diskicon.c  w_wad.c  z_zone.c  z_zone.h
opl/: CMakeLists.txt  opl3.hpp  opl_internal.hpp  opl_queue.cpp  opl_queue.hpp
pcsound/: CMakeLists.txt  pcsound_internal.hpp
src/: CMakeLists.txt  aes_prng.cpp  crispy.hpp  d_event.hpp  d_iwad.cpp  d_iwad.hpp  d_loop.cpp  d_loop.hpp  d_mode.hpp  d_ticcmd.hpp  deh_defs.hpp  deh_io.cpp  deh_mapping.hpp  deh_str.cpp  gusconf.cpp  i_glob.cpp  i_musicpack.cpp  i_oplmusic.cpp  i_sdlsound.cpp  i_sound.hpp  i_system.cpp  m_cheat.hpp  m_config.cpp  memio.cpp  memio.hpp  midifile.cpp  midifile.hpp  mus2mid.cpp  net_client.cpp  net_common.cpp  net_common.hpp  net_loop.cpp  net_query.cpp  net_sdl.cpp  net_server.cpp  sha1.hpp  v_diskicon.cpp  v_trans.cpp  v_video.cpp  w_file.hpp  (+7 more)
src/doom/: CMakeLists.txt  am_map.cpp  d_items.hpp  d_main.cpp  d_player.hpp  d_textur.hpp  d_think.hpp  deh_bexptr.cpp  deh_bexstr.cpp  deh_cheat.cpp  deh_ptr.cpp  deh_thing.cpp  doomdata.hpp  doomdef.hpp  f_finale.cpp  hu_lib.hpp  hu_stuff.cpp  info.hpp  m_crispy.cpp  m_crispy.hpp  m_menu.cpp  p_ceilng.cpp  p_doors.cpp  p_enemy.cpp  p_extnodes.hpp  p_extsaveg.cpp  p_extsaveg.hpp  p_floor.cpp  p_lights.cpp  p_local.hpp  p_map.cpp  p_maputl.cpp  p_mobj.cpp  p_mobj.hpp  p_plats.cpp  p_pspr.cpp  p_pspr.hpp  p_saveg.cpp  p_setup.cpp  p_spec.cpp  (+17 more)
src/setup/: CMakeLists.txt
src/zone/: memblock.cpp  memblock.hpp  memzone.cpp  (+1 more)
testing_tools/: CMakeLists.txt  i_system_ext.cpp  i_system_ext.h  lump_ext.cpp  lump_ext.h  lump_testing.hpp  z_zone_ext.cpp  z_zone_ext.h  zone_testing.hpp
tests/: CMakeLists.txt  args_guard.hpp  lights_guard.hpp  main.cpp  mock_main.cpp  mock_main.hpp  new_main.cpp  run_main.Launch_Doom_Main.02NOVIEW.LMP.approved.heap  run_main.Launch_Doom_Main.02NOVIEW.LMP.approved.txt  run_main.Launch_Doom_Main.E1M2SAW.LMP.approved.heap  run_main.Launch_Doom_Main.E1M2SAW.LMP.approved.lumps  run_main.Launch_Doom_Main.E2M4ALL.LMP.approved.heap  run_main.Launch_Doom_Main.E2M4ALL.LMP.approved.txt  run_main.cpp  test1.cpp  zallocator_test.cpp
textscreen/: CMakeLists.txt  txt_button.hpp  txt_checkbox.hpp  txt_conditional.cpp  txt_conditional.hpp  txt_dropdown.cpp  txt_dropdown.hpp  txt_fileselect.cpp  txt_fileselect.hpp  txt_gui.cpp  txt_inputbox.hpp  txt_label.hpp  txt_main.hpp  txt_radiobutton.hpp  txt_scrollpane.hpp  txt_sdl.cpp  txt_separator.hpp  txt_spinctrl.hpp  txt_strut.hpp  txt_table.hpp  txt_widget.cpp  txt_widget.hpp  txt_window.hpp  txt_window_action.hpp
utils/: memory.hpp
validation_set/: 22NOVIEW.LMP  E1M1SEC.LMP  E1M1SWCH.LMP  E1M2SAW.LMP  E1M2SEC.LMP  E1M3SEC.LMP  E1M4EXIT.LMP  E1M4TRIK.LMP  E1M4TRK2.LMP  E1M6ALT.LMP  E1M6KEYS.LMP  E1M7ALL.LMP  E1M7SAW.LMP  E1M7SOUL.LMP  E1M8BACK.LMP  E1M8WIN1.LMP  E1M8WIN2.LMP  E1M9ALL.LMP  E1M9JUMP.LMP  E1M9PEDS.LMP  E2M1ALL.LMP  E2M2TRIK.LMP  E2M3SEC.LMP  E2M3SUIT.LMP  E2M4ALL.LMP  E2M4EXIT.LMP  E2M4STUK.LMP  E2M4TRAP.LMP  E2M6RED.LMP  E2M8WIN1.LMP  E2M8WIN2.LMP  E2M9WIN.LMP  E3M2TRAP.LMP  E3M4SWCH.LMP  E3M5BOXS.LMP  E3M5KEYS.LMP  E3M5YSEC.LMP  E3M6BLUE.LMP  E3M6BOX.LMP  E3M6EXIT.LMP  (+29 more)
(+3 files in other folders)
